--- a/notebooks/cmems-bathymetry/download_proxies.ipynb
+++ b/notebooks/cmems-bathymetry/download_proxies.ipynb
@@ -2,22 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kras\\AppData\\Local\\Temp\\ipykernel_25212\\3508299612.py:9: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
-      "\n",
-      "import os\n",
-      "os.environ['USE_PYGEOS'] = '0'\n",
-      "import geopandas\n",
-      "\n",
-      "In a future release, GeoPandas will switch to using Shapely by default. If you are using PyGEOS directly (calling PyGEOS functions on geometries from GeoPandas), this will then stop working and you are encouraged to migrate from PyGEOS to Shapely 2.0 (https://shapely.readthedocs.io/en/latest/migration_pygeos.html).\n",
-      "  import geopandas as gpd\n"
-     ]
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "                \n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -50,7 +70,7 @@
     "from dateutil.parser import parse\n",
     "\n",
     "# custom functionality import without requirement to pip install package\n",
-    "local_path = r\"C:\\Users\\kras\\GitHub\\ee-packages-py\"  # path to local GitHub clone\n",
+    "local_path = r\"C:\\Users\\kras\\Documents\\GitHub\\ee-packages-py\"  # path to local GitHub clone\n",
     "sys.path.append(local_path)\n",
     "from eepackages.applications.bathymetry import Bathymetry\n",
     "from eepackages import tiler\n",
@@ -60,9 +80,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "                \n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# TODO: resample function to 100 m resolution output\n",
     "# TODO: implement migration to NETCDF4 with WGS84 non projected lon lat relative to MSL\n",
@@ -79,9 +134,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "                \n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# acknowledgements & code references:\n",
     "# https://github.com/openearth/eo-bathymetry/\n",
@@ -91,9 +181,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "                \n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# see scheme at https://github.com/openearth/eo-bathymetry/blob/master/notebooks/rws-bathymetry/acces_api.pdf for a workflow visualization \n",
     "\n",
@@ -101,7 +226,7 @@
     "main_fol = r\"p:\\11209821-cmems-global-sdb\" # name of the main local folder \n",
     "bucket = \"cmems-sdb\" # name of the Google Cloud Storage bucket to store files in the cloud\n",
     "credential_file = r\"p:\\11209821-cmems-global-sdb\\00_miscellaneous\\KEYS\\bathymetry-543b622ddce7.json\" # Cloud Storage credential key\n",
-    "output_fol = \"Proxy\" # name of the overall project\n",
+    "output_fol = r\"01_intertidal\\02_data\\01_proxy\" # name of the overall project\n",
     "project_name = \"AOI_GER_WaddenSea\" # name of the project AoI\n",
     "draw_AoI = 0 # toggle 1 to draw AoI, 0 to load\n",
     "\n",
@@ -747,40 +872,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "                \n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "if not os.path.exists(os.path.join(main_fol, output_fol)):\n",
+    "    os.makedirs(os.path.join(main_fol, output_fol))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "                \n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stored:  z11_x1331_y880_t2020-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1331_y880_t2021-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1331_y881_t2020-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1331_y881_t2021-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1332_y879_t2020-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1332_y879_t2021-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1332_y880_t2020-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1332_y880_t2021-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1332_y881_t2020-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1332_y881_t2021-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1332_y882_t2020-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1332_y882_t2021-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1333_y879_t2020-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1333_y879_t2021-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1333_y880_t2020-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1333_y880_t2021-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1333_y881_t2020-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1333_y881_t2021-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1333_y882_t2020-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1333_y882_t2021-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1334_y880_t2020-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1334_y880_t2021-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1334_y881_t2020-01-01_2022-01-01.tif\n",
-      "Stored:  z11_x1334_y881_t2021-01-01_2022-01-01.tif\n",
-      "Stored:  z9_x332_y220_t2021-01-01_2022-01-01.tif\n",
-      "Stored:  z9_x333_y219_t2021-01-01_2022-01-01.tif\n",
-      "Stored:  z9_x333_y220_t2021-01-01_2022-01-01.tif\n"
+      "Stored:  z9_x113_y116_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x113_y117_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x114_y116_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x114_y117_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x114_y118_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x115_y116_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x115_y117_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x115_y118_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x163_y228_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x163_y229_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x164_y228_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x164_y229_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x189_y291_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x189_y292_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x190_y291_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x190_y292_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x263_y160_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x263_y161_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x263_y162_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x264_y160_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x264_y161_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x264_y162_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x264_y163_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x265_y161_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x265_y162_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x265_y163_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x265_y164_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x265_y165_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x266_y163_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x266_y164_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x266_y165_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x267_y164_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x267_y165_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x292_y306_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x292_y307_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x293_y306_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x293_y307_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x294_y306_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x294_y307_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x319_y273_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x319_y274_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x320_y273_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x320_y274_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x354_y222_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x354_y223_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x434_y200_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x435_y199_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x435_y200_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x493_y288_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x493_y289_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x494_y288_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x494_y289_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x69_y162_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x69_y163_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x69_y164_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x70_y162_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x70_y163_t2021-01-01_2022-01-01.tif\n",
+      "Stored:  z9_x70_y164_t2021-01-01_2022-01-01.tif\n"
      ]
     }
    ],
@@ -800,7 +1035,10 @@
     "for blob in ls:\n",
     "    #if \"tif\" in blob.name:\n",
     "    mode_fol = blob.name.split('/')[0]\n",
-    "    if mode_fol == mode:\n",
+    "    zoom_level = blob.name.split('/')[1]\n",
+    "    try: zoom_level_num = zoom_level.split(\"z\")[1]\n",
+    "    except: zoom_level_num = zoom_level.split(\"z\")[0]\n",
+    "    if mode_fol == mode and str(zoomed_list[sel_tile]) == zoom_level_num:\n",
     "        file_name = \"_\".join(blob.name.split('/')[1:])\n",
     "        check_files.append(file_name) #blob.name.split('/')[-1]\n",
     "        if not os.path.exists(os.path.join(main_fol, output_fol, mode_fol)): # create subfolder\n",
@@ -837,7 +1075,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.18"
   },
   "orig_nbformat": 4,
   "vscode": {
