--- a/notebooks/cmems-bathymetry/method_improvements.ipynb
+++ b/notebooks/cmems-bathymetry/method_improvements.ipynb
@@ -54,11 +54,11 @@
     "grid cell image collection\n",
     "- image clipped on tile & obtain centroid\n",
     "- cloud-mask with QA60?\n",
-    "- calculate proportion of coverge on tile\n",
+    "- calculate proportion of coverage on tile\n",
     "- time of acquisition in featurecollection metadata\n",
     "\n",
     "tidal calibration (TODO!)\n",
-    "- load in GTSM info and match centriod with closest point / linear interpolation\n",
+    "- load in GTSM info and match centroid with closest point / linear interpolation\n",
     "- derive MHWS and MLWS (in m) relative to MSL\n",
     "- get tidal elevation relative to MSL at time of acq. from GTSM\n",
     "- convert to percentage by combining tidal elev, MHWS & MLWS\n",
