Adding post-processing scripts
Various scripts for post-processing results

--- a/notebooks/cmems-bathymetry/post_processing_proxies.ipynb
+++ b/notebooks/cmems-bathymetry/post_processing_proxies.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kras\\AppData\\Local\\Temp\\ipykernel_12352\\163438947.py:10: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
+      "C:\\Users\\kras\\AppData\\Local\\Temp\\ipykernel_2692\\1041980866.py:10: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
       "\n",
       "import os\n",
       "os.environ['USE_PYGEOS'] = '0'\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
     "main_fol = r\"p:\\11209821-cmems-global-sdb\" # name of the main local folder \n",
     "bucket = \"cmems-sdb\" # name of the Google Cloud Storage bucket to store files in the cloud\n",
     "credential_file = r\"p:\\11209821-cmems-global-sdb\\00_miscellaneous\\KEYS\\bathymetry-543b622ddce7.json\" # Cloud Storage credential key\n",
-    "output_fol = r\"01_intertidal\\02_data\\01_proxy\" # name of the overall project\n",
+    "output_fol = r\"01_intertidal\\02_data\\05_calibrated\" # name of the overall project\n",
     "project_name = \"AOI_GER_WaddenSea\" # name of the project AoI\n",
     "draw_AoI = 0 # toggle 1 to draw AoI, 0 to load\n",
     "\n",
@@ -216,13 +216,13 @@
     "stop_date = \"2022-01-01\" # end date of the composites\n",
     "compo_int = 12 # composite interval [months]\n",
     "compo_len = 12 # composite length [months]\n",
-    "scale = 30  # output resolution of the image from download proxies [m]\n",
+    "scale = 100  # output resolution of the image from download proxies [m]\n",
     "upscale = 100 # upscaled resolution for the image [m]\n",
     "crs = \"EPSG:4326\" # output projection of the image\n",
     "\n",
     "# tiling options\n",
     "zoomed_list = [9, 10, 11] # list with zoom levels to be inspected\n",
-    "sel_tile = 0 # idx of chosen tile level in zoomed_list (inspect the map to chose it accordingly), z9 too big for in memory computations\n",
+    "sel_tile = 2 # idx of chosen tile level in zoomed_list (inspect the map to chose it accordingly), z9 too big for in memory computations\n",
     "# note, see https://www.openearth.nl/rws-bathymetry/2019.html; Z9 is optimal size..\n",
     "\n",
     "# load google credentials, if specified\n",
@@ -231,15 +231,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Post-processing the API proxies"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +271,63 @@
     }
    ],
    "source": [
-    "# set scale factor and imae path\n",
+    "# TODO: add properties to the processed images again (export this first..)\n",
+    "# TODO: fix NC files to have correct headers & variable names\n",
+    "# TODO: merged product without interpolation & with interpolation (linear) over 500 m?\n",
+    "# TODO: standardize the NC header (interpolation flags & quality indicators)\n",
+    "# TODO: interpolated datasets; flag for interpolated points\n",
+    "# TODO: xx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Post-processing the API proxies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "                \n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# set scale factor and image path\n",
     "scale_factor = upscale / scale # new resolution / scale of download_proxies\n",
     "\n",
     "# make dedicated directory for the output\n",
@@ -293,38 +342,212 @@
     "#         os.remove(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", file))\n",
     "# for file in os.listdir(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", \"netcdf\")):\n",
     "#     if file.endswith(\".nc\"):\n",
-    "#         os.remove(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", file))\n",
+    "#         os.remove(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", \"netcdf\", file))\n",
     "\n",
     "# loop over the files and reproject, resample & export to NetCDF (the latter cant be done in GEE)\n",
     "# TODO: mind the relative to MSL!\n",
     "for file in os.listdir(os.path.join(main_fol, output_fol, mode)):\n",
     "    if file.endswith(\".tif\"):\n",
     "        xds = rxr.open_rasterio(os.path.join(main_fol, output_fol, mode, file), masked=True) # open the raster file, note CRS is EPSG:4326 by default, standard S2 & L8 crs\n",
+    "        #print(xds)\n",
     "        rsp_rpj = xds.rio.reproject(crs, shape=(int(xds.rio.height / scale_factor), int(xds.rio.width / scale_factor))) # reproject to WGS84 and resample to scale factor\n",
     "        #rsp_rpj.rio.resolution()\n",
-    "        rsp_rpj.rio.to_raster(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", file.replace(\".tif\", \"_100m.tif\")), driver=\"GTiff\", compress=\"LZW\") # save the raster file\n",
+    "        if scale == upscale: file_name_out = file\n",
+    "        if scale != upscale: file_name_out = file.replace(\".tif\", f\"_{upscale}m.tif\")\n",
+    "        rsp_rpj.rio.to_raster(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", file_name_out), driver=\"GTiff\", compress=\"LZW\") # save the raster file\n",
     "        #rsp_rpj.plot()\n",
-    "        xds_rsp_rpj = rxr.open_rasterio(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", file.replace(\".tif\", \"_100m.tif\")), masked=True) # open the raster file\n",
-    "        xds_rsp_rpj.to_netcdf(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", \"netcdf\", file.replace(\".tif\", \"_100m.nc\")), mode=\"w\", format='NetCDF4') # save the raster file\n",
+    "        xds_rsp_rpj = rxr.open_rasterio(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", file_name_out), masked=True) # open the raster file\n",
+    "        xds_rsp_rpj.to_netcdf(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", \"netcdf\", file_name_out.replace(\".tif\", \".nc\")), mode=\"w\", format='NetCDF4') # save the raster file\n",
     "\n",
     "        # Open the GeoTIFF and NetCDF files\n",
-    "        #data_tif = rxr.open_rasterio(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", file.replace(\".tif\", \"_100m.tif\")))\n",
-    "        #data_nc = rxr.open_rasterio(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", \"netcdf\", file.replace(\".tif\", \"_100m.nc\")))\n",
+    "        # data_tif = rxr.open_rasterio(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", file_name_out))\n",
+    "        # data_nc = rxr.open_rasterio(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", \"netcdf\", file_name_out))\n",
     "\n",
     "        # print the datasets\n",
-    "        #data_tif\n",
-    "        #data_nc\n",
+    "        # data_tif\n",
+    "        # data_nc\n",
     "\n",
     "        # replace the fill value with NaN\n",
-    "        #data_nc_masked = data_nc.where(data_nc.values != data_nc.attrs[\"_FillValue\"])  \n",
+    "        # data_nc_masked = data_nc.where(data_nc.values != data_nc.attrs[\"_FillValue\"])  \n",
     "\n",
-    "        # test if equal data arrays (where matching nan's are true)\n",
-    "        #np.array_equal(data_nc_masked, data_tif, equal_nan=True)\n",
+    "        # # test if equal data arrays (where matching nan's are true)\n",
+    "        # print(np.array_equal(data_nc_masked, data_tif, equal_nan=True))\n",
     "\n",
     "        # plot the data\n",
     "        #data_nc.plot()\n",
     "        #data_nc_masked.plot()\n",
     "        #data_tif.plot()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Masking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "                \n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# make dedicated directory for the output\n",
+    "if not os.path.exists(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\\clipped_masked\")):\n",
+    "    os.makedirs(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\\clipped_masked\"))\n",
+    "if not os.path.exists(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\\clipped_masked\", \"netcdf\")):\n",
+    "    os.makedirs(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\\clipped_masked\", \"netcdf\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "                \n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WaddenSea\n",
+      "intertidal_improved_100m_z11_x1063_y660_t2021-01-01_2022-01-01_100m.tif\n",
+      "intertidal_improved_100m_z11_x1064_y660_t2021-01-01_2022-01-01_100m.tif\n",
+      "intertidal_improved_100m_z11_x1065_y659_t2021-01-01_2022-01-01_100m.tif\n",
+      "intertidal_improved_100m_z11_x1065_y660_t2021-01-01_2022-01-01_100m.tif\n",
+      "intertidal_improved_100m_z11_x1066_y659_t2021-01-01_2022-01-01_100m.tif\n",
+      "intertidal_improved_100m_z11_x1066_y660_t2021-01-01_2022-01-01_100m.tif\n",
+      "intertidal_improved_100m_z11_x1067_y659_t2021-01-01_2022-01-01_100m.tif\n",
+      "intertidal_improved_100m_z11_x1068_y659_t2021-01-01_2022-01-01_100m.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO: clip tiles covering the AOI to pixels in the global coastal mask\n",
+    "# TODO: statistics on the data (area, perc, etc..)\n",
+    "from shapely.geometry import box\n",
+    "import rasterio\n",
+    "\n",
+    "#limit = [-0.04, 0.14] # between -0.05 & 0.15 \n",
+    "limit = 0.95 # limiter at 95% (of image limits); total is 90%\n",
+    "\n",
+    "# compute which file intersects with the AOI feasOPT geometry and clip & mask it\n",
+    "image_cm = []\n",
+    "image_mask = []\n",
+    "for file in os.listdir(os.path.join(main_fol, \"00_miscellaneous\\AOI_feasOPT\")):\n",
+    "    for shp in os.listdir(os.path.join(main_fol, \"00_miscellaneous\\AOI_feasOPT\", file, \"AOI_Id_0\")):\n",
+    "        if shp.endswith(\".shp\") and \"WaddenSea\" in file:\n",
+    "            print(file)\n",
+    "            image_cms = [] \n",
+    "            image_masks = []\n",
+    "            gdf = gpd.read_file(os.path.join(main_fol, \"00_miscellaneous\\AOI_feasOPT\", file, \"AOI_Id_0\", shp)) # load the optical feasibility layer shapefile\n",
+    "\n",
+    "            for fileAOI in os.listdir(os.path.join(main_fol, \"00_miscellaneous\\AOIs\")):\n",
+    "                if fileAOI.endswith(\"WaddenSea.geojson\"):\n",
+    "                    gdfAOI = gpd.read_file(os.path.join(main_fol, \"00_miscellaneous\\AOIs\", fileAOI)) # load the AOI shapefile\n",
+    "                    #gdfAOI.plot()\n",
+    "\n",
+    "                    gdf_mask = gdf.intersection(gdfAOI) # calculate intersection between AoIs\n",
+    "                    #print(check.is_empty[0])\n",
+    "                    if gdf_mask.is_empty[0] == False: # here we continue\n",
+    "                        #print(gdf_mask.is_empty, print(fileAOI))\n",
+    "\n",
+    "                        for filetif in os.listdir(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\")):\n",
+    "                            if filetif.endswith(\".tif\"):# and \"x1065_y660\" in filetif:\n",
+    "                                xds = rxr.open_rasterio(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", filetif), masked=True)\n",
+    "                                gdf_mask = gdf_mask.to_crs(xds.rio.crs) # match crs's\n",
+    "                                boxed_geom_AOIs = box(*gdf_mask.geometry.unary_union.bounds) # get bounding box of the AOI\n",
+    "                                boxed_geom_tile = box(*xds.rio.bounds()) # get bounding box of the tiles\n",
+    "\n",
+    "                                if boxed_geom_AOIs.contains(boxed_geom_tile) or boxed_geom_AOIs.intersects(boxed_geom_tile):\n",
+    "                                    print(filetif)\n",
+    "                                    # gdf_mask.plot()\n",
+    "                                    #plt.plot(*boxed_geom_AOIs.exterior.xy)\n",
+    "                                    #plt.plot(*boxed_geom_tile.exterior.xy)\n",
+    "                                    try: # eliminates the boxes where box AOIs intersect but not the AOIs itself (i.e. no data values in the tile)\n",
+    "                                        xds_clipped = xds.rio.clip(gdf_mask.geometry.unary_union.geoms, xds.rio.crs, drop=True) # clip the raster to the geometry\n",
+    "                                        xds_cm = xds_clipped.where((xds_clipped > limit*np.nanmin(xds_clipped)) & (xds_clipped < limit*np.nanmax(xds_clipped))) # mask the raster to the limits\n",
+    "                                        #xds_cm.plot()\n",
+    "                                        #xds_clipped.plot()\n",
+    "                                        image_cms.append(xds_cm)\n",
+    "                                        with rasterio.open(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\", filetif)) as src: # get raster file for total pixels\n",
+    "                                            out_image, transformed = rasterio.mask.mask(src, gdf_mask.geometry.unary_union.geoms, crop=True, filled=False)\n",
+    "                                            image_masks.append(out_image)\n",
+    "                                            #plt.imshow(out_image.mask.squeeze())\n",
+    "                                        xds_cm.rio.to_raster(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\\clipped_masked\", filetif.replace(\".tif\", \"_cm.tif\")), driver=\"GTiff\", compress=\"LZW\") # export tif\n",
+    "                                        xds_cm.to_netcdf(os.path.join(main_fol, output_fol, mode, \"rsp_rpj\\clipped_masked\", \"netcdf\", filetif.replace(\".tif\", \"_cm.nc\")), mode=\"w\", format='NetCDF4') # save the raster file as nc\n",
+    "                                    except:\n",
+    "                                        continue\n",
+    "                                    \n",
+    "            image_cm.append(image_cms)\n",
+    "            image_mask.append(image_masks)"
    ]
   },
   {
